--- a/README
+++ b/README
@@ -1,2 +1,2 @@
-This repository contains the necessary files to reconstruct a basic blog
-in case that is needed. Also known as a backup.
+This repository contains the necessary files to reconstruct the blog
+at simeonvisser.com in case that is needed. Also known as a backup.
